# TableTenisTourney

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/app/: main.py
backend/app/cli/: seed_admin.py
backend/app/core/: config.py  deps.py  errors.py
backend/app/db/: session.py
backend/app/domain/: achievements.py  bracket.py  leaderboard.py  prediction_scoring.py  round_robin.py  skills.py  tournament_state.py
backend/app/schemas/: auth.py  compare.py  exhibition.py  mappers.py  match.py  player.py  prediction.py  rating.py  registration.py  skill.py  tournament.py
backend/app/services/: admin_player_service.py  auth_service.py  exhibition_service.py  leaderboard_service.py  player_service.py  point_service.py  prediction_service.py  registration_service.py  schedule_service.py  scoring_service.py  team_service.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_achievements.py  test_approval.py  test_auth.py  test_authz.py  test_bracket.py  test_bracket_flow.py  test_compare_teams.py  test_directory.py  test_exhibitions.py  test_hardening.py  test_health.py  test_leaderboard.py  test_leaderboard_api.py  test_live.py  test_players_directory.py  test_points.py  test_prediction_scoring.py  test_predictions.py  test_rating.py  test_ratings_flow.py  test_registrations.py  test_rivals.py  test_round_robin.py  test_schedule_scoring.py  test_scoring.py  test_skills.py  test_teams.py  test_tournament_state.py  test_tournaments.py
(+101 files in other folders)
